--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -29,6 +29,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/stopread" />
+
+    <ImageView
+        android:id="@+id/wikiImage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+         />
+
+    <Gallery
+        android:id="@+id/wikigallery"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/editWP"
