--- a/res/layout/layout_footer.xml
+++ b/res/layout/layout_footer.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+    android:layout_width="fill_parent"
     android:layout_height="wrap_content"
-    android:gravity="center_horizontal"
-    android:orientation="vertical" >
+    android:gravity="center"
+    android:orientation="horizontal"
+    >
     
 	<Button
         android:id="@+id/again_button"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:enabled="false"
@@ -29,12 +31,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/stopread" />
-
-    <Gallery
-        android:id="@+id/wikigallery"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
-
 
     <TextView
         android:id="@+id/editWP"
