--- a/res/layout/layout_main.xml
+++ b/res/layout/layout_main.xml
@@ -1,12 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
     <ImageView
             android:id="@+id/wikiImage"
-            android:layout_gravity="center"
+            android:layout_centerInParent="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
-</LinearLayout>
+    
+    <Button android:id="@+id/imgPrevious"
+        android:gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_alignParentLeft="true"
+        android:alpha="0.5"
+        android:text="@string/imgleft"/>
+    <Button android:id="@+id/imgNext"
+        android:gravity="center"
+        android:layout_width="wrap_content"
+        android:layout_height="fill_parent"
+        android:layout_alignParentRight="true"
+        android:alpha="0.5"
+        android:text="@string/imgright"/>
+</RelativeLayout>
