--- a/res/layout/layout_header.xml
+++ b/res/layout/layout_header.xml
@@ -1,7 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="wrap_content"
+    android:orientation="vertical" >
+    
+    
+	<TextView 
+	    android:id="@+id/language_preference"
+	    android:layout_width="match_parent"
+        android:layout_height="wrap_content"/>
     
 	<TextView
         android:id="@+id/txtTitle"
@@ -10,4 +17,10 @@
         android:text="@string/title"
         android:gravity="center"
         android:textAppearance="?android:attr/textAppearanceLarge" />
+	
+	<Spinner
+	    android:id="@+id/supported_languages"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_weight="1" />
 </LinearLayout>
