--- a/res/layout/layout_header.xml
+++ b/res/layout/layout_header.xml
@@ -2,14 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical" >
-    
-    
-	<TextView 
-	    android:id="@+id/language_preference"
-	    android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
-    
+    android:orientation="vertical"
+    >        
+	    
 	<TextView
         android:id="@+id/txtTitle"
         android:layout_width="match_parent"
@@ -18,9 +13,18 @@
         android:gravity="center"
         android:textAppearance="?android:attr/textAppearanceLarge" />
 	
-	<Spinner
-	    android:id="@+id/supported_languages"
-	    android:layout_width="wrap_content"
-	    android:layout_height="wrap_content"
-	    android:layout_weight="1" />
+	<LinearLayout android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:gravity="left">
+        	<TextView 
+		    android:id="@+id/language_preference"
+		    android:layout_width="wrap_content"
+		       android:layout_height="wrap_content"/>
+		
+		<Spinner
+		    android:id="@+id/supported_languages"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content" />
+    </LinearLayout>
 </LinearLayout>
