--- a/res/layout/layout_footer.xml
+++ b/res/layout/layout_footer.xml
@@ -11,5 +11,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/readit" />
-
+    
+    <TextView android:id="@+id/linkInfo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
 </LinearLayout>
