--- a/res/layout/layout_main.xml
+++ b/res/layout/layout_main.xml
@@ -5,11 +5,23 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    <ImageView
-            android:id="@+id/wikiImage"
-            android:layout_centerInParent="true"
+    <LinearLayout 
+        android:layout_width="match_parent"    
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true"
+        android:gravity="center"       
+        android:orientation="vertical">
+        <TextView
+        android:id="@+id/imgText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        />
+        <ImageView
+            android:id="@+id/wikiImage"            
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"/>
+    
+    </LinearLayout>
     
     <Button android:id="@+id/imgPrevious"
         android:gravity="center"
@@ -24,5 +36,6 @@
         android:layout_height="fill_parent"
         android:layout_alignParentRight="true"
         android:alpha="0.5"
-        android:text="@string/imgright"/>
+        android:text="@string/imgright"/>    
+
 </RelativeLayout>
