--- a/res/layout/layout_footer.xml
+++ b/res/layout/layout_footer.xml
@@ -15,5 +15,6 @@
     <TextView android:id="@+id/linkInfo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
         />
 </LinearLayout>
