--- a/res/layout/layout_footer.xml
+++ b/res/layout/layout_footer.xml
@@ -11,9 +11,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/readit" />
+    <Spinner
+		    android:id="@+id/supported_languages"
+		    android:layout_width="wrap_content"
+		    android:layout_height="wrap_content" />
     
     <TextView android:id="@+id/linkInfo"
-        android:layout_width="wrap_content"
+        android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         />
