--- a/res/layout/layout_header.xml
+++ b/res/layout/layout_header.xml
@@ -2,8 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical"
-    >        
+    android:orientation="horizontal"
+    >
+
 	    
 	<TextView
         android:id="@+id/txtTitle"
@@ -12,4 +13,10 @@
         android:text="@string/title"
         android:gravity="center"
         android:textAppearance="?android:attr/textAppearanceLarge" />
+	
+	<ProgressBar
+        android:id="@+id/searchProgress"
+        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 </LinearLayout>
