--- a/res/layout/layout_main.xml
+++ b/res/layout/layout_main.xml
@@ -16,6 +16,14 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         />
+
+        <ProgressBar
+            android:id="@+id/progressImage"
+            android:visibility="invisible"
+            style="?android:attr/progressBarStyleLarge"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
         <ImageView
             android:id="@+id/wikiImage"            
             android:layout_width="wrap_content"
