--- a/res/layout/layout_main.xml
+++ b/res/layout/layout_main.xml
@@ -19,7 +19,7 @@
 
         <ProgressBar
             android:id="@+id/progressImage"
-            android:visibility="invisible"
+            android:visibility="gone"
             style="?android:attr/progressBarStyleLarge"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content" />
