--- a/res/layout/layout_main.xml
+++ b/res/layout/layout_main.xml
@@ -28,7 +28,8 @@
         android:layout_width="match_parent"    
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        android:gravity="center">
+        android:gravity="center"
+        android:orientation="vertical">
 	        <TextView
 	        android:id="@+id/imgText"
 	        android:layout_width="wrap_content"
@@ -42,7 +43,7 @@
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content" />
 	
-	        <ImageView
+	        <ImageSwitcher
 	            android:id="@+id/wikiImage"            
 	            android:layout_width="wrap_content"
 	            android:layout_height="wrap_content"/>
