--- a/res/layout/layout_footer.xml
+++ b/res/layout/layout_footer.xml
@@ -5,7 +5,10 @@
     android:gravity="center"
     android:orientation="horizontal"
     >
-    
+    <ImageView android:id="@+id/linkImage" 
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_menu_directions"/>
     <TextView android:id="@+id/linkInfo"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
