--- a/res/layout/layout_main.xml
+++ b/res/layout/layout_main.xml
@@ -30,11 +30,27 @@
         android:layout_centerInParent="true"
         android:gravity="center"
         android:orientation="vertical">
-	        <TextView
-	        android:id="@+id/imgText"
-	        android:layout_width="wrap_content"
-	        android:layout_height="wrap_content"
-	        />
+        	<RelativeLayout         
+		        android:layout_width="match_parent"    
+		        android:layout_height="wrap_content"
+		        android:visibility="gone">
+		       	<TextView
+			        android:id="@+id/imgText"
+			        android:layout_width="match_parent"
+			        android:layout_height="wrap_content"
+			        android:layout_alignParentTop="true"
+			        android:layout_centerHorizontal="true"
+			        android:gravity="center"
+			        />
+		       	 <ProgressBar
+		            android:id="@+id/progressLoadImage"
+		            android:visibility="gone"
+		            style="?android:attr/progressBarStyleSmall"
+		            android:layout_width="wrap_content"
+		            android:layout_height="wrap_content"
+		            android:layout_alignParentTop="true"
+			       	android:layout_alignParentLeft="true" />
+		    </RelativeLayout>	        
 	
 	        <ProgressBar
 	            android:id="@+id/progressImage"
