--- a/res/layout/layout_main.xml
+++ b/res/layout/layout_main.xml
@@ -32,11 +32,10 @@
         android:orientation="vertical">
         	<RelativeLayout         
 		        android:layout_width="match_parent"    
-		        android:layout_height="wrap_content"
-		        android:visibility="gone">
+		        android:layout_height="wrap_content">
 		       	<TextView
 			        android:id="@+id/imgText"
-			        android:layout_width="match_parent"
+			        android:layout_width="wrap_content"
 			        android:layout_height="wrap_content"
 			        android:layout_alignParentTop="true"
 			        android:layout_centerHorizontal="true"
@@ -44,7 +43,6 @@
 			        />
 		       	 <ProgressBar
 		            android:id="@+id/progressLoadImage"
-		            android:visibility="gone"
 		            style="?android:attr/progressBarStyleSmall"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
