--- a/res/layout/layout_header.xml
+++ b/res/layout/layout_header.xml
@@ -12,6 +12,14 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true" />
 	
+	<SeekBar
+	    android:id="@+id/txtSeekBar"
+	    android:layout_width="match_parent"
+	    android:layout_height="wrap_content"
+	    android:layout_alignParentTop="true"
+	    android:layout_centerHorizontal="true"
+	    android:visibility="gone" />
+	
 	<TextView
         android:id="@+id/txtTitle"
         android:layout_width="match_parent"
@@ -21,4 +29,7 @@
         android:layout_centerHorizontal="true"
         android:gravity="center"
         android:textAppearance="?android:attr/textAppearanceLarge" />
+
+	
+
 </RelativeLayout>
