--- a/res/layout/layout_main.xml
+++ b/res/layout/layout_main.xml
@@ -4,19 +4,28 @@
     android:gravity="center"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+     >
      <RelativeLayout 
         android:id="@+id/main_noinfo"
         android:layout_width="match_parent"    
         android:layout_height="match_parent"
         android:layout_centerInParent="true"
-        android:gravity="center">
+        >
 
         <ImageView
             android:id="@+id/main_search"
             android:layout_width="75dip"
             android:layout_height="75dip"
+            android:layout_centerInParent="true"
             android:src="@android:drawable/ic_btn_speak_now" />
+        
+       	<SearchView 
+            android:id="@+id/main_search_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"></SearchView>
+        
 
     </RelativeLayout>
     <RelativeLayout
