--- a/res/layout/layout_footer.xml
+++ b/res/layout/layout_footer.xml
@@ -1,33 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
 
  <LinearLayout
-     xmlns:android="http://schemas.android.com/apk/res/android"
- 	xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
-     android:layout_width="fill_parent"
-  android:layout_height="wrap_content"
-  android:gravity="center"
-  android:orientation="vertical">
-  <LinearLayout
-   android:layout_width="fill_parent"
-   android:layout_height="wrap_content"
-   android:gravity="left"
-   android:orientation="horizontal"
-   >
-      <ImageView android:id="@+id/linkImage" 
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:src="@android:drawable/ic_menu_directions"/>
-  <TextView android:id="@+id/linkInfo"
-      android:layout_width="wrap_content"
-      android:layout_height="wrap_content"
-      android:textAppearance="?android:attr/textAppearanceLarge"
-      />
- </LinearLayout>
-
- <com.google.ads.AdView android:id="@+id/adView"
-         android:layout_width="wrap_content"
-         android:layout_height="wrap_content"
-         ads:adUnitId="a14fdb0fed6cda1"
-         ads:adSize="BANNER"
-         ads:loadAdOnCreate="false"/>
+	 xmlns:android="http://schemas.android.com/apk/res/android"
+	 xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
+	 android:layout_width="fill_parent"
+	 android:layout_height="wrap_content"
+	 android:gravity="center"
+	 android:orientation="vertical">
+	  <LinearLayout
+	   android:layout_width="fill_parent"
+	   android:layout_height="wrap_content"
+	   android:gravity="left"
+	   android:orientation="horizontal">
+	      <ImageView android:id="@+id/linkImage" 
+		      android:layout_width="wrap_content"
+		      android:layout_height="wrap_content"
+		      android:src="@android:drawable/ic_menu_directions"/>
+		  <TextView android:id="@+id/linkInfo"
+		      android:layout_width="wrap_content"
+		      android:layout_height="wrap_content"
+		      android:textAppearance="?android:attr/textAppearanceLarge"
+		      />
+	 </LinearLayout>
+	
+	 <com.google.ads.AdView android:id="@+id/adView"
+	         android:layout_width="wrap_content"
+	         android:layout_height="wrap_content"
+	         ads:adUnitId="a14fdb0fed6cda1"
+	         ads:adSize="BANNER"
+         	ads:loadAdOnCreate="false"/>
 </LinearLayout>
