--- a/res/layout/layout_main.xml
+++ b/res/layout/layout_main.xml
@@ -56,6 +56,7 @@
 		            style="?android:attr/progressBarStyleSmall"
 		            android:layout_width="wrap_content"
 		            android:layout_height="wrap_content"
+		            android:visibility="gone"
 		            android:layout_alignParentTop="true"
 			       	android:layout_alignParentLeft="true" />
 		    </RelativeLayout>	        
