multilingue ready + en, fr

--- a/res/layout/layout_header.xml
+++ b/res/layout/layout_header.xml
@@ -24,7 +24,7 @@
         android:id="@+id/txtTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/title"
+        android:text="@string/search"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:gravity="center"
