--- a/res/layout/layout_main.xml
+++ b/res/layout/layout_main.xml
@@ -25,7 +25,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:gravity="center">
+            android:gravity="center"
+            android:id="@+id/main_search_layout">"
        	    <ImageView 
        	        android:id="@+id/main_img_search"
        	        android:layout_width="wrap_content"
@@ -38,6 +39,14 @@
        	   	    android:layout_height="wrap_content"
        	   	    android:gravity="left" />
        	</LinearLayout>
+       	<ImageView 
+       	    android:id="@+id/no_result"
+       	    android:layout_width="wrap_content"
+       	    android:layout_height="wrap_content"
+       	    android:src="@android:drawable/ic_delete"
+       	    android:layout_centerHorizontal="true"
+       	    android:layout_below="@id/main_search_layout">
+       	</ImageView>"
         
 
     </RelativeLayout>
