--- a/res/layout/layout_main.xml
+++ b/res/layout/layout_main.xml
@@ -149,5 +149,16 @@
 	        android:alpha="0.25"
 	        android:text="@string/imgright"/>  
     </RelativeLayout>
+    <RelativeLayout
+        android:id="@+id/main_info_list"
+        android:gravity="center"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent">
+	    <ListView 
+	        android:id="@+id/info_list"
+	        android:layout_width="fill_parent"
+	        android:layout_height="fill_parent"></ListView>"
+        
+	</RelativeLayout>
 
 </RelativeLayout>
